--- a/src/Blogs/Blogs.module.css
+++ b/src/Blogs/Blogs.module.css
@@ -1,9 +1,8 @@
 .article{
-    display: inline-block;
+    display: block;
     padding: 20px 20px 20px 20px;
     margin: 100px 20px 20px 20px;
-    position: center;
-    text-align: left;
+    text-align: center;
 }
 
 .h1{
@@ -12,14 +11,20 @@
     font-weight: bold;
     font-style: inherit;
     color: darkred;
-    text-align: center;
+}
+
+.img{
+    width: 25cm;
+    height: 10cm;
+    display: block;
+    margin: 20px auto;
 }
 
 .p{
     font-size: 20px;
     font-weight: normal;
     font-family: Arial;
-    color: black;
+    color: cornflowerblue;
 }
 
 .header{
@@ -32,4 +37,13 @@
 
 .bgc{
     background-color: snow;
+}
+
+.section{
+    display: block;
+    margin: 10px auto;
+    text-align: center;
+    font-size: 20px;
+    font-weight: bolder;
+    font-family: "Times New Roman";
 }
