--- a/src/Follow/Follow.module.css
+++ b/src/Follow/Follow.module.css
@@ -12,44 +12,13 @@
     text-align: left;
 }
 
-.section{
-    margin: 20px;
-    padding: 10px;
-    color: red;
-    font-weight: bold;
-}
-
-.checkbox{
-    margin: 20px;
-    padding: 10px;
-    color: darkred;
-    font-weight: bold;
-}
-
-.dropdown{
-    margin: 20px;
-    padding: 10px;
-    color: darkred;
-    font-weight: bold;
-}
-
-.button{
-    background-color: red;
-    color: snow;
-    text-align: center;
-    border-radius: 12px;
-    width: 15%;
-    margin: 20px;
-}
-
 .bgc{
     background-color: snow;
 }
 
-@media (max-width: 700px) {
-    .header{
-        color: black;
-        background-color: azure;
-        font-size: 18px;
+@media (max-width: 1400px) {
+    .div{
+        margin: 0px;
+        background-color: snow;
     }
 }
