--- a/src/TagDetails/tagDetails.module.css
+++ b/src/TagDetails/tagDetails.module.css
@@ -17,7 +17,7 @@
     text-align: center;
     font-weight: normal;
     font-family: Arial;
-    color: cornflowerblue;
+    color: blueviolet;
     font-style: italic;
     font-size: 26px;
 }
