--- a/src/Tags/Tags.module.css
+++ b/src/Tags/Tags.module.css
@@ -3,6 +3,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
+    margin: 80px auto;
 }
 
 .header{
@@ -14,7 +15,7 @@
 }
 
 .div{
-    margin: 20px;
+    margin: 40px;
 }
 
 .bgc{
